# x-reminder

./: .env.example  .gitignore  LICENSE  README.md  _encoding_report.json  _encoding_validation.json  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  factory.py  main.py
backend/app/ai/: __init__.py  future_services.py  recommendation_engine.py
backend/app/core/: access_tokens.py  auth_context.py  cache.py  config.py  dependencies.py  error_handlers.py  exceptions.py  logging.py  rate_limit.py
backend/app/infrastructure/: __init__.py
backend/app/middleware/: __init__.py  request_id.py  security_headers.py  timing.py
backend/app/models/: __init__.py
backend/app/monitoring/: __init__.py  error_reporter.py  health.py  job_history.py  last_poll_store.py  metrics.py  models.py  monitoring_engine.py  polling_engine.py  queue_manager.py  retry_queue.py  task_manager.py  worker_main.py
backend/app/notifications/: __init__.py  batch_processor.py  dedup.py  delivery_history.py  engine.py  failure_queue.py  health.py  jobs.py  message_builder.py  metrics.py  models.py  queue_manager.py  rate_limiter.py  retry_queue.py  service.py  telegram_delivery.py  user_resolver.py  worker.py
backend/app/repositories/: __init__.py  base.py  qdrant_repository.py  redis_repository.py  x_processed_tweet_repository.py  x_profile_repository.py  (+1 more)
backend/scripts/: smoke_monitoring_scheduler.py
backend/tests/: test_access_tokens.py  test_auth_service.py  test_monitoring_dedup.py  test_qdrant_collections.py  test_qdrant_smoke.py
backend/tools/: install_sprint12.py  install_sprint13_part1.py  patch_sprint13.py  patch_sprint13b.py
(+282 files in other folders)
